recoder proto