@@ -1,4 +1,4 @@
-package com.sg2022.we_got_the_moves.ui.training;
+package com.sg2022.we_got_the_moves.ui.training.mediapipe;
 
 import static android.content.Context.WINDOW_SERVICE;
 
@@ -14,7 +14,6 @@ import android.hardware.camera2.CameraDevice;
 import android.hardware.camera2.CameraManager;
 import android.hardware.camera2.CameraMetadata;
 import android.hardware.camera2.CaptureRequest;
-import android.hardware.camera2.TotalCaptureResult;
 import android.hardware.camera2.params.StreamConfigurationMap;
 import android.media.ImageReader;
 import android.os.Handler;
@@ -26,22 +25,16 @@ import android.view.Display;
 import android.view.Surface;
 import android.view.WindowManager;
 import android.widget.Toast;
-
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.core.app.ActivityCompat;
-
 import com.google.mediapipe.components.CameraHelper;
 import com.sg2022.we_got_the_moves.repository.UserRepository;
-
-import java.io.File;
-import java.util.Arrays;
-
 import io.reactivex.rxjava3.core.SingleObserver;
 import io.reactivex.rxjava3.disposables.Disposable;
+import java.util.List;
 
 public class Camera2Helper extends CameraHelper {
-  public static final String TAG = "Camera2Helper";
   private static final int REQUEST_CAMERA_PERMISSION = 0;
   private static final SparseIntArray ORIENTATIONS = new SparseIntArray();
 
@@ -52,20 +45,20 @@ public class Camera2Helper extends CameraHelper {
     ORIENTATIONS.append(Surface.ROTATION_270, 180);
   }
 
+  public final String TAG = "Camera2Helper";
   protected CameraDevice cameraDevice;
   protected CameraCaptureSession cameraCaptureSessions;
   protected CaptureRequest.Builder captureRequestBuilder;
-  String new_cam_id;
   private String cameraId;
   private Size imageDimension;
   private ImageReader imageReader;
   private Handler mBackgroundHandler;
   private HandlerThread mBackgroundThread;
+  private final Activity activity;
   private SurfaceTexture outputSurface;
   private Size frameSize;
   private int frameRotation;
-  private CameraHelper.CameraFacing cameraFacing;
-  private Context context;
+  private final Context context;
   private final CameraDevice.StateCallback stateCallback =
       new CameraDevice.StateCallback() {
         @Override
@@ -91,36 +84,21 @@ public class Camera2Helper extends CameraHelper {
             cameraDevice.close();
             cameraDevice = null;
           } catch (Exception e) {
-            Log.d(TAG, "ERROR: " + e.toString() + " ER " + error);
+            Log.d(TAG, "ERROR: " + e + " ER " + error);
             e.printStackTrace();
           }
         }
       };
-  private File file;
-  final CameraCaptureSession.CaptureCallback captureCallbackListener =
-      new CameraCaptureSession.CaptureCallback() {
-        @Override
-        public void onCaptureCompleted(
-            CameraCaptureSession session, CaptureRequest request, TotalCaptureResult result) {
-          super.onCaptureCompleted(session, request, result);
-          Toast.makeText(context, "Saved:" + file, Toast.LENGTH_SHORT).show();
-          createCameraPreview();
-        }
-      };
 
-  public Camera2Helper(Context context) {
-    this.context = context;
-  }
-
-  public Camera2Helper(Context context, SurfaceTexture surfaceTexture) {
-    this.context = context;
+  public Camera2Helper(@NonNull Activity activity, @NonNull SurfaceTexture surfaceTexture) {
+    this.activity = activity;
+    this.context = this.activity.getApplicationContext();
     this.outputSurface = surfaceTexture;
   }
 
   @Override
   public void startCamera(
       Activity context, CameraFacing cameraFacing, @Nullable SurfaceTexture surfaceTexture) {
-    this.cameraFacing = cameraFacing;
     closeCamera();
     startBackgroundThread();
     openCamera();
@@ -159,10 +137,9 @@ public class Camera2Helper extends CameraHelper {
     return new Size(scaledWidth, scaledHeight);
   }
 
-  @Override
   public boolean isCameraRotated() {
     Display display =
-        ((WindowManager) MediapipeActivity.getInstanceActivity().getSystemService(WINDOW_SERVICE))
+        ((WindowManager) this.activity.getApplicationContext().getSystemService(WINDOW_SERVICE))
             .getDefaultDisplay();
     this.frameRotation = display.getRotation();
     return this.frameRotation % 2 == 1;
@@ -188,51 +165,24 @@ public class Camera2Helper extends CameraHelper {
   private void openCamera() {
     CameraManager manager = (CameraManager) context.getSystemService(Context.CAMERA_SERVICE);
     try {
-
-      Log.d(TAG, "CameraListSiize " + manager.getCameraIdList().length);
-
       for (String cameraId : manager.getCameraIdList()) {
-
         CameraCharacteristics cameraCharacteristics = manager.getCameraCharacteristics(cameraId);
-        Log.println(
-            Log.DEBUG,
-            TAG,
-            "Camera #"
-                + cameraId
-                + " ===> "
-                + Arrays.toString(
-                    cameraCharacteristics.get(
-                        CameraCharacteristics.REQUEST_AVAILABLE_CAPABILITIES)));
-        Log.println(
-            Log.DEBUG,
-            TAG,
-            cameraCharacteristics.get(cameraCharacteristics.LENS_FACING).toString());
-        /*    if (CameraCharacteristics.isCameraFacingBack(cameraCharacteristics) && backCameraId == null) {
-            backCameraId = cameraId;
-        } else if (isCameraFacingFront(cameraCharacteristics) && frontCameraId == null) {
-            frontCameraId = cameraId;
-        }*/
       }
 
-      //    CameraSelector cameraSelector = cameraFacing == CameraFacing.FRONT ?
-      // CameraSelector.DEFAULT_FRONT_CAMERA : CameraSelector.DEFAULT_BACK_CAMERA;
-      // Camera camera = this.cameraProvider.bindToLifecycle(lifecycleOwner, cameraSelector, new
-      // UseCase[]{this.preview, this.imageCapture});
-      UserRepository userRepository =
-          UserRepository.getInstance(MediapipeActivity.getInstanceActivity().getApplication());
+      UserRepository userRepository = UserRepository.getInstance(this.activity.getApplication());
       userRepository.getCameraBoolean(
-          new SingleObserver<Boolean>() {
+          new SingleObserver<>() {
             @Override
-            public void onSubscribe(@io.reactivex.rxjava3.annotations.NonNull Disposable d) {}
+            public void onSubscribe(@NonNull Disposable d) {}
 
             @Override
-            public void onSuccess(@io.reactivex.rxjava3.annotations.NonNull Boolean aBoolean) {
+            public void onSuccess(@NonNull Boolean aBoolean) {
               try {
                 if (aBoolean) {
                   for (String cameraIdListElement : manager.getCameraIdList()) {
                     CameraCharacteristics cameraCharacteristics =
                         manager.getCameraCharacteristics(cameraIdListElement);
-                    if (cameraCharacteristics.get(cameraCharacteristics.LENS_FACING) == 0) {
+                    if (cameraCharacteristics.get(CameraCharacteristics.LENS_FACING) == 0) {
                       cameraId = cameraIdListElement;
                       break;
                     }
@@ -242,7 +192,7 @@ public class Camera2Helper extends CameraHelper {
                   for (String cameraIdListElement : manager.getCameraIdList()) {
                     CameraCharacteristics cameraCharacteristics =
                         manager.getCameraCharacteristics(cameraIdListElement);
-                    if (cameraCharacteristics.get(cameraCharacteristics.LENS_FACING) == 1) {
+                    if (cameraCharacteristics.get(CameraCharacteristics.LENS_FACING) == 1) {
                       cameraId = cameraIdListElement;
                       break;
                     }
@@ -254,7 +204,6 @@ public class Camera2Helper extends CameraHelper {
                 CameraCharacteristics characteristics = manager.getCameraCharacteristics(cameraId);
                 StreamConfigurationMap map =
                     characteristics.get(CameraCharacteristics.SCALER_STREAM_CONFIGURATION_MAP);
-                assert map != null;
                 imageDimension = map.getOutputSizes(SurfaceTexture.class)[0];
                 // Add permission for camera and let user grant the permission
                 if (ActivityCompat.checkSelfPermission(context, Manifest.permission.CAMERA)
@@ -282,17 +231,9 @@ public class Camera2Helper extends CameraHelper {
             }
 
             @Override
-            public void onError(@io.reactivex.rxjava3.annotations.NonNull Throwable e) {}
+            public void onError(@NonNull Throwable e) {}
           });
 
-      // fetchFrame();
-      /*if(previewDisplayView!=null){
-          previewDisplayView.setVisibility(View.VISIBLE);
-      }*/
-      /* if(outputTextureView!=null){
-          outputTextureView.setVisibility(View.VISIBLE);
-          initRecorder();
-      }*/
       Log.d(TAG, "Camera debug start 113");
 
     } catch (CameraAccessException e) {
@@ -302,27 +243,23 @@ public class Camera2Helper extends CameraHelper {
     Log.e(TAG, "openCamera X");
   }
 
-  // private CameraCaptureSession cameraCaptureSession;
-  // @RequiresApi(api = Build.VERSION_CODES.O)
   protected void createCameraPreview() {
     try {
       Log.d(TAG, "Creating camera preview");
       outputSurface = (outputSurface == null) ? new CustomSurfaceTexture(0) : outputSurface;
 
-      SurfaceTexture texture = outputSurface; // textureView.getSurfaceTexture();
-      assert texture != null;
+      SurfaceTexture texture = outputSurface;
       texture.setDefaultBufferSize(imageDimension.getWidth(), imageDimension.getHeight());
       frameSize = imageDimension;
       Surface surface = new Surface(texture);
       captureRequestBuilder = cameraDevice.createCaptureRequest(CameraDevice.TEMPLATE_PREVIEW);
-      // captureRequestBuilder.set(CaptureRequest.CONTROL_VIDEO_STABILIZATION_MODE,
-      // CameraMetadata.CONTROL_VIDEO_STABILIZATION_MODE_ON);
+
       captureRequestBuilder.set(
           CaptureRequest.LENS_OPTICAL_STABILIZATION_MODE,
           CaptureRequest.LENS_OPTICAL_STABILIZATION_MODE_ON);
       captureRequestBuilder.addTarget(surface);
       cameraDevice.createCaptureSession(
-          Arrays.asList(surface),
+          List.of(surface),
           new CameraCaptureSession.StateCallback() {
             @Override
             public void onConfigured(@NonNull CameraCaptureSession cameraCaptureSession) {
@@ -352,7 +289,6 @@ public class Camera2Helper extends CameraHelper {
       Log.e(TAG, "updatePreview error, return");
     }
     captureRequestBuilder.set(CaptureRequest.CONTROL_MODE, CameraMetadata.CONTROL_MODE_AUTO);
-    // captureRequestBuilder.set(CaptureRequest.JPEG_ORIENTATION, ORIENTATIONS.get(frameRotation));
 
     try {
       cameraCaptureSessions.setRepeatingRequest(
